Fix select dropdown overflow issue

--- a/sass/blocks/_stock-page-header.sass
+++ b/sass/blocks/_stock-page-header.sass
@@ -44,7 +44,7 @@ $block: ".stock-page-header"
     position: relative
     display: block
     width: 100%
-    padding: 25px 10px 10px
+    padding: 25px 10px 15px
     background-color: #243C5C
 
     @media screen and (max-width: 960px)
@@ -55,7 +55,7 @@ $block: ".stock-page-header"
   // $Page header menu icon
   &__menuicon
     position: absolute
-    top: 15px
+    top: 20px
     left: 10px
     display: none
     width: 30px
@@ -68,11 +68,12 @@ $block: ".stock-page-header"
     opacity: 1
     transition: all .5s
 
-    &:hover
-     opacity: 0.8
-
     @media screen and (max-width: 960px)
       display: block
+      top: 15px
+
+    &:hover
+     opacity: 0.8
 
     // $Page header menu icon CONTEXT: $Page header MOD: state opened
     #{$block}_state_opened &
@@ -89,13 +90,9 @@ $block: ".stock-page-header"
 
   // $Page header menu area
   &__menu
-    position: absolute
-    top: 60px
-    bottom: 0
-    left: 0
-    right: 0
     display: block
     width: 100%
+    height: calc(100% - 60px)
     background-color: #243C5C
 
 
@@ -103,15 +100,14 @@ $block: ".stock-page-header"
   &__select
     display: block
     width: 100%
-    padding: 20px 10px
+    padding: 15px 10px
 
 
   // $Page header navigation area
   &__nav
-    position: absolute
-    top: 90px
-    bottom: 0
     display: block
     width: 100%
+    height: calc(100% - 80px)
     background-color: #64a5fd
     overflow: auto
+
